kubernetes/apps/media/audiobookshelf/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://audiobookshelf.${DOMAIN_5}/healthcheck
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - audiobookshelf.${DOMAIN_5}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: domain-5-subdomain-https
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 8080
      timeouts:
        request: 0s
        backendRequest: 0s
